# ClassificationBanner

./: .gitignore  CONTRIBUTING.md  ClassificationBanner.sln  README.md  build.ps1  pyproject.toml  sbom.json
.github/actions/: build.yml
.github/workflows/: main.yml  python-app.yml  release.yml
ClassificationBanner.Installer/: ClassificationBanner.Installer.csproj  Program.cs
ClassificationBanner_Install/: Invoke-AppDeployToolkit.ps1
Group Policy/: ClassificationBanner.adml  ClassificationBanner.admx  Install-ClassificationBannerADMX.ps1
Registry Files/: CONFIDENTIAL.reg  CUI.reg  DISABLE_BANNER.reg  SCI.reg  SECRET.reg  TOP_SECRET.reg  UNCLASSIFIED.reg
src/: main.py
src/Windows/: MIGRATION_GUIDE.md  README.md  __init__.py  appbar.py  banner_window.py  main.py  registry_manager.py  settings.py  system_info.py
src/Windows/ClassificationBanner/: appbar.py  banner.py  banner_window.py  constants.py  registry_manager.py  settings.py  system_info.py
src/Windows/Group Policy/: ClassificationBanner.admx
src/Windows/Group Policy/en-us/: ClassificationBanner.adml
src/Windows/Registry Files/: CONFIDENTIAL.reg  CUI.reg  SCI.reg  SECRET.reg  TOP_SECRET.reg
src/Windows/classification_banner/: __init__.py  banner.py  banner_window.py  constants.py  monitor_manager.py  registry_manager.py  settings.py
src/Windows/tests/: test_banner_core.py
